--- a/Test_fine_modolo/Testfinemodolo.html
+++ b/Test_fine_modolo/Testfinemodolo.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link rel="stylesheet" href="prova.css">
+    <link rel="stylesheet" href="testfinemodolo.css">
 </head>
 <body>
     <h1>MEMORY GAME</h1>
@@ -113,7 +113,7 @@
        
     </div>
 
-    <script src="prova.js"></script>
+    <script src="testofinemodolo.js"></script>
 </body>
 </html>
 
